--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,10 +43,10 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
-      - name: Upload build output
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
-          path: './demo-sites/theme-manager-demo/dist'
+          path: demo-sites/theme-manager-demo/dist
 
       - name: Deploy to GitHub Pages
         id: deployment
